' @compare_tag Process-ClassDiagram v0.1
@startuml
title HatDriver Process Class Diagram

namespace fast::rf {
  namespace DiagnosticDefinition {
    enum DiagnosticType
  }
  namespace messages {
    namespace InfrastructureMsgs {
      class DiagnosticMsg <<(M,#FFFF00)>>
      class ReadyToArmStatusMsg <<(M,#FFFF00)>>
      class ArmCommandMsg <<(M,#FFFF00)>>
    }
  }
  namespace core::Infrastructure {
    class DiagnosticManager
  }
  interface IProcess
  namespace BaseMachineSystem {
    namespace BaseMachineSubsystem  {
      package HatDriver #LightYellow;line:blue {
        interface IHatDriverProcess #LimeGreen  {
          +{abstract} bool init()
        }
	IHatDriverProcess -up-|> IProcess
        abstract BaseHatDriverProcess #LimeGreen {
          +DiagnosticMsg[] getDiagnostics()
          +bool updateDiagnostic(DiagnosticType type, Level level, DiagnosticMessage message, string description)
          +ReadyToArmStatusMsg get_ready_to_arm()
          #bool update(double current_time_sec)
          #string pretty()
          #DiagnosticManager diagnosticManager
          #ReadyToArmStatusMsg ready_to_arm
          #robot_arm_command robot_arm_command

        }
        BaseHatDriverProcess .up.|> IHatDriverProcess
        BaseHatDriverProcess --> DiagnosticManager: <<use>>
        class BasicHatDriverProcess {
          +bool init()
          +bool update(double current_time_sec)
          +bool update_RobotArmCommand(ArmCommandMsg robot_arm_command)
          +string pretty()
        }
        BasicHatDriverProcess -up-|> BaseHatDriverProcess
        class DummyHatDriverProcess {
          +bool update(double current_time_sec)
          +string pretty()
        }
        DummyHatDriverProcess -up-|> BaseHatDriverProcess
      }
    }
  }
}
@enduml
